[package]
name = "journalsql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = { version = "0.21.0", optional = true }
clickhouse = { version = "0.11.4", features = ["time"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
fnv = "1.0.3"
lazy_static = "1.4.0"
log = "0.4"
nom = "7.1"
num_cpus = "1.15.0"
prometheus = "0.13.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-hook = "0.3"
strip-ansi-escapes = { git = "https://github.com/luser/strip-ansi-escapes.git", rev = "a0a306ab6c5a76f269fea8659fdd736f1d2d56b9" }
strum = { version = "0.24", features = ["derive"] }
time = "0.3"
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
thiserror = "1.0"

[features]
default = []
bytes-as-base64 = ["dep:base64"]

[profile.release]
debug = true
