[package]
name = "journalsqld"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
clickhouse.workspace = true
crossbeam-channel.workspace = true
env_logger.workspace = true
fnv.workspace = true
lazy_static.workspace = true
log.workspace = true
num_cpus.workspace = true
nom.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
strip-ansi-escapes.workspace = true
strum.workspace = true
time.workspace = true
tokio.workspace = true
thiserror.workspace = true

systemd_journal_parser = { path = "../parser" }
